--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>schwendimankw</title>
+<meta charset="utf-8"/>
+</head>
 <body>
 <h1>Hello World</h1>
+<h2>List</h2>
+<ul>
+<li>description</li>
+</ul>
+<h2>Description</h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
